fixed some bags; deleted yarn files

--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "json-server": "^0.16.3",
+    "@testing-library/jest-dom": "~5.11.4",
+    "@testing-library/react": "~11.1.0",
+    "@testing-library/user-event": "~12.1.10",
+    "axios": "~0.21.0",
+    "json-server": "~0.16.3",
     "node-sass": "4.14.1",
-    "react": "^17.0.1",
-    "react-date-picker": "^8.0.3",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "react-select": "^3.1.1",
-    "react-slick": "^0.27.13",
-    "react-yandex-maps": "^4.4.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^0.2.4",
-    "yandex-map-react": "^1.1.1"
+    "react": "~17.0.1",
+    "react-date-picker": "~8.0.3",
+    "react-dom": "~17.0.1",
+    "react-redux": "~7.2.2",
+    "react-router-dom": "~5.2.0",
+    "react-scripts": "~4.0.0",
+    "react-select": "~3.1.1",
+    "react-slick": "~0.27.13",
+    "react-yandex-maps": "~4.4.0",
+    "redux": "~4.0.5",
+    "redux-thunk": "~2.3.0",
+    "slick-carousel": "~1.8.1",
+    "web-vitals": "~0.2.4",
+    "yandex-map-react": "~1.1.1"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
